test/src/e2e_vm_tests/test_programs/should_pass/language/const_decl_in_library/src/hell.sw
library hell;

const THE_DEVIL = 6;
