test/src/e2e_vm_tests/test_programs/should_fail/shadowing/shadowed_consts_and_vars/src/lib.sw
library;

pub const X = 5;

pub const L = 5;

pub const P = 5;

pub const R = 5;
